# mobilerobot_with_arm

./: README.md
amr_with_arm_description/: CMakeLists.txt  package.xml
amr_with_arm_description/config/: arm_controllers.yaml
amr_with_arm_description/launch/: amr_with_arm_gazebo.launch.py
amr_with_arm_description/urdf/: amr_with_arm.xacro
bot/: README.md
bot/bot_description/: package.xml
bot/bot_description/launch/: display.launch.py  gazebo.launch.py  robot_description.launch.py
bot/bot_description/meshes/: base_link.stl  left_wheel_1.stl  lidar_1.stl  right_wheel_1.stl
bot/bot_description/urdf/: bot.gazebo  bot.trans  bot.xacro
bot/bot_gazebo/: CMakeLists.txt  package.xml
bot/bot_gazebo/launch/: gazebo.launch.py
open_manipulator_x/open_manipulator_x_description/ros2_control/: open_manipulator_x_system.ros2_control.xacro
open_manipulator_x/open_manipulator_x_description/urdf/: open_manipulator_x.urdf.xacro  open_manipulator_x_robot.urdf.xacro
open_manipulator_x/open_manipulator_x_moveit_config/config/: moveit.rviz  open_manipulator_x.srdf
open_manipulator_x/open_manipulator_x_moveit_config/launch/: move_group.launch.py  moveit_rviz.launch.py
